--- a/云服务器/阿里云.md
+++ b/云服务器/阿里云.md
@@ -77,7 +77,7 @@
     
     1. 在第二步时，可能报以下错误：
     
-        ![image-20220418085912918](E:\OneDrive\OneDrive - mail.scut.edu.cn\MyTypora\云服务器\imgs\安装mysql报错_1)
+        ![image-20220418085912918](./imgs/安装mysql报错_1)
 
         原因：`compat-openssl10`不兼容
         
@@ -89,7 +89,7 @@
         
     2. 在第三步时，可能报错
     
-        ![image-20220418090938420](E:\OneDrive\OneDrive - mail.scut.edu.cn\MyTypora\云服务器\imgs\安装mysql报错_2)
+        ![image-20220418090938420](./imgs/安装mysql报错_2)
     
         原因：`mysql`团队重新开发的数据库软件`mariadb`与`oracle`的`mysql`软件有冲突
     
@@ -101,7 +101,7 @@
     
     3. 在最后一步时，有以下信息
     
-        ![image-20220418091815609](E:\OneDrive\OneDrive - mail.scut.edu.cn\MyTypora\云服务器\imgs\安装mysql报错_3)
+        ![image-20220418091815609](./imgs/安装mysql报错_3)
     
         解决：暂时不解决
     
@@ -111,7 +111,7 @@
 
     2. 查看密码：`cat /var/log/mysqld.log`
 
-    ![image-20220418093011775](E:\OneDrive\OneDrive - mail.scut.edu.cn\MyTypora\云服务器\imgs\查看密码)
+    ![image-20220418093011775](./imgs/查看密码)
     
 6. 查看`MySQL`状态并启动服务
    
@@ -164,7 +164,7 @@
 
 5. 报错2058：
 
-    ![image-20220418104228838](E:\OneDrive\OneDrive - mail.scut.edu.cn\MyTypora\云服务器\imgs\mysql连接错误)
+    ![image-20220418104228838](./imgs/mysql连接错误)
 
     原因：`mysql8`对用户进行加密
 
@@ -172,7 +172,7 @@
     
 6. 报错`SSH`：
 
-    ![image-20220418105745294](E:\OneDrive\OneDrive - mail.scut.edu.cn\MyTypora\云服务器\imgs\mysql连接错误_SSH)
+    ![image-20220418105745294](./imgs/mysql连接错误_SSH)
 
     原因：未知
 
@@ -180,11 +180,17 @@
 
 # 六.查询本地公网地址
 
+## 方法一：
+
 1. 将云数据库`RDS`的外网白名单修改为`0.0.0.0/0`，表示所有`IP`地址可以访问
 
 2. 用本地命令行窗口连接数据库，之后输入命令`show processlist`，得到下面结果。
 
-    ![image-20220419164926409](E:\OneDrive\OneDrive - mail.scut.edu.cn\MyTypora\云服务器\imgs\我的公网地址)
+    ![image-20220419164926409](./imgs/我的公网地址)
 
 3. 删除云数据库`RDS`的外网白名单`0.0.0.0/0`，增加自己的公网地址。
+
+## 方法二：
+
+直接百度搜索IP
 
