--- a/云服务器/阿里云.md
+++ b/云服务器/阿里云.md
@@ -71,7 +71,7 @@
 3. 检查`net-tools`依赖：`rpm -qa | grep net-tools`。如果没有，请下载依赖：`yun install net-tools`
 
 4. 安装程序：在文件目录"`/opt/`"下，使用命令`rpm -ivh mysql-***`。注意：必须严格按照安装顺序进行。
-    ![image-20220418084447901](E:\OneDrive\OneDrive - mail.scut.edu.cn\MyTypora\云服务器\imgs\mysql安装顺序)
+    ![image-20220418084447901](./imgs/mysql安装顺序)
     
     报错信息：
     
@@ -192,5 +192,5 @@
 
 ## 方法二：
 
-直接百度搜索IP
+直接百度搜索`IP`
 
