--- a/云服务器/阿里云.md
+++ b/云服务器/阿里云.md
@@ -85,7 +85,7 @@
         
         参考文章：
         
-        [compat-openssl10不兼容]: https://blog.csdn.net/weixin_43357860/article/details/118369751?ops_request_misc=%257B%2522request%255Fid%2522%253A%2522165024328316780261995625%2522%252C%2522scm%2522%253A%252220140713.130102334.pc%255Fall.%2522%257D&amp;request_id=165024328316780261995625&amp;biz_id=0&amp;utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~rank_v31_ecpm-1-118369751.142^v9^pc_search_result_control_group,157^v4^control&amp;utm_term=error%3A+Failed+dependencies%3A+++++++++libcrypto.so.10%28%29%2864bit%29+is+needed+by+mysql-community-client-plugins-8.0.25-1.el7.x86_64+++++++++libssl.so.10%28%29%2864bit%29+is+needed+by+mysql-community-client-plugins-8&amp;spm=1018.2226.3001.4187
+        [compat-openssl10不兼容](https://blog.csdn.net/weixin_43357860/article/details/118369751?ops_request_misc=%257B%2522request%255Fid%2522%253A%2522165024328316780261995625%2522%252C%2522scm%2522%253A%252220140713.130102334.pc%255Fall.%2522%257D&amp;request_id=165024328316780261995625&amp;biz_id=0&amp;utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~rank_v31_ecpm-1-118369751.142^v9^pc_search_result_control_group,157^v4^control&amp;utm_term=error%3A+Failed+dependencies%3A+++++++++libcrypto.so.10%28%29%2864bit%29+is+needed+by+mysql-community-client-plugins-8.0.25-1.el7.x86_64+++++++++libssl.so.10%28%29%2864bit%29+is+needed+by+mysql-community-client-plugins-8&amp;spm=1018.2226.3001.4187)
         
     2. 在第三步时，可能报错
     
