update imgs_name in file

--- a/云服务器/阿里云.md
+++ b/云服务器/阿里云.md
@@ -71,13 +71,13 @@
 3. 检查`net-tools`依赖：`rpm -qa | grep net-tools`。如果没有，请下载依赖：`yun install net-tools`
 
 4. 安装程序：在文件目录"`/opt/`"下，使用命令`rpm -ivh mysql-***`。注意：必须严格按照安装顺序进行。
-    ![image-20220418084447901](./imgs/mysql安装顺序)
+    ![image-20220418084447901](./imgs/mysql安装顺序.png)
     
     报错信息：
     
     1. 在第二步时，可能报以下错误：
     
-        ![image-20220418085912918](./imgs/安装mysql报错_1)
+        ![image-20220418085912918](./imgs/安装mysql报错_1.png)
 
         原因：`compat-openssl10`不兼容
         
@@ -89,7 +89,7 @@
         
     2. 在第三步时，可能报错
     
-        ![image-20220418090938420](./imgs/安装mysql报错_2)
+        ![image-20220418090938420](./imgs/安装mysql报错_2.png)
     
         原因：`mysql`团队重新开发的数据库软件`mariadb`与`oracle`的`mysql`软件有冲突
     
@@ -101,7 +101,7 @@
     
     3. 在最后一步时，有以下信息
     
-        ![image-20220418091815609](./imgs/安装mysql报错_3)
+        ![image-20220418091815609](./imgs/安装mysql报错_3.png)
     
         解决：暂时不解决
     
@@ -111,7 +111,7 @@
 
     2. 查看密码：`cat /var/log/mysqld.log`
 
-    ![image-20220418093011775](./imgs/查看密码)
+    ![image-20220418093011775](./imgs/查看密码.png)
     
 6. 查看`MySQL`状态并启动服务
    
@@ -164,7 +164,7 @@
 
 5. 报错2058：
 
-    ![image-20220418104228838](./imgs/mysql连接错误)
+    ![image-20220418104228838](./imgs/mysql连接错误.png)
 
     原因：`mysql8`对用户进行加密
 
@@ -172,7 +172,7 @@
     
 6. 报错`SSH`：
 
-    ![image-20220418105745294](./imgs/mysql连接错误_SSH)
+    ![image-20220418105745294](./imgs/mysql连接错误_SSH.png)
 
     原因：未知
 
@@ -186,7 +186,7 @@
 
 2. 用本地命令行窗口连接数据库，之后输入命令`show processlist`，得到下面结果。
 
-    ![image-20220419164926409](./imgs/我的公网地址)
+    ![image-20220419164926409](./imgs/我的公网地址.png)
 
 3. 删除云数据库`RDS`的外网白名单`0.0.0.0/0`，增加自己的公网地址。
 
